# PyProject

./: .env_template  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
